# SMBR-hardware

./: .gitignore  .gitmodules  Changelog.md  Notes.md  README.md
control_board/: MCU.kicad_sch  README.md  can_interface.kicad_sch  control_board.kicad_pcb  control_board.kicad_prl  control_board.kicad_pro  control_board.kicad_sch  debug.kicad_sch  fan.kicad_sch  fans.kicad_sch  fp-info-cache  led_driver.kicad_sch  led_drivers.kicad_sch  motor.kicad_sch  motors.kicad_sch  panel_configuration.json  thermistors.kicad_sch
expansion_sata/: expansion_sata.kicad_pcb  expansion_sata.kicad_prl  expansion_sata.kicad_pro  expansion_sata.kicad_sch  panel.kicad_pro  panel_configuration.json
fluorometer_led/: fluorometer_led.kicad_pcb  fluorometer_led.kicad_prl  fluorometer_led.kicad_pro  fluorometer_led.kicad_sch  panel.kicad_prl  panel_configuration.json  sym-lib-table
fw/: CMakeLists.txt  Dockerfile  Makefile
fw/source/: CMakeLists.txt  FreeRTOS-openocd.c  cli.cpp  cli.hpp  codes.hpp  logger.cpp  logger.hpp  main.cpp  main.hpp
fw/source/can_bus/: can_bus.cpp  can_bus.hpp  can_message.cpp  can_message.hpp  message_receiver.hpp  message_router.hpp
fw/source/config/: FreeRTOSConfig.h  freertos.c  tusb_config.h  usb_descriptors.c
fw/source/threads/: can_thread.cpp  can_thread.hpp  heartbeat_thread.cpp  heartbeat_thread.hpp  test_thread.cpp  test_thread.hpp  usb_thread.cpp  usb_thread.hpp
illumination_board_basic_RGBW/: Illumination_board.kicad_pcb  Illumination_board.kicad_prl  Illumination_board.kicad_pro  Illumination_board.kicad_sch  README.md  panel_configuration.json
illumination_board_template/: Illumination_board.kicad_pcb  Illumination_board.kicad_prl  Illumination_board.kicad_pro  Illumination_board.kicad_sch  fp-info-cache
interface_board/: ADC.kicad_sch  BOM.csv  CAN.kicad_sch  Errata.md  Ethernet.kicad_sch  Fan.kicad_sch  PoE.kicad_sch  Power_input.kicad_sch  Power_supply.kicad_sch  README.md  Thermometer_#3.kicad_sch  interface_board.kicad_pcb  interface_board.kicad_prl  interface_board.kicad_pro  interface_board.kicad_sch  panel_configuration.json
motor_shield_airpump/: Makefile  README.md  index.html  motor_shield_airpump.kicad_pro
motor_shield_peristaltic/: .gitignore  Makefile  README.md  index.html
pump_board/: .gitignore  Makefile  README.md  pump_board.kicad_pro
resources/: TrendBit_page_layout.kicad_wks  TrendBit_page_layout_header.kicad_wks  calc.py  thermistor_curve.py
sensor_board/: Display.kicad_sch  ES_LED_Driver.kicad_sch  ES_LED_Receiver.kicad_sch  MCU.kicad_sch  Power_supply.kicad_sch  README.md  SM_1.kicad_sch  SM_2.kicad_sch  SM_3.kicad_sch  TS_Emitter.kicad_sch  TS_Receiver.kicad_sch  Temperature_measurement.kicad_sch  (+13 more)
(+93 files in other folders)
